--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,29 @@ server/public
 vite.config.ts.*
 *.tar.gz
 /generated/prisma
+
+# Environment files
+.env
+.env.local
+.env.production
+.env.staging
+
+# Database
+prisma/dev.db
+prisma/dev.db-journal
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+/dist
+/build
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+Thumbs.db
