--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,28 @@
 # Environment Variables Template
-# Copy this file to .env and fill in your actual values
+# Copy this file to .env and fill in your production or staging values
 
-# Database Configuration
-# Production PostgreSQL database (Supabase recommended)
-DATABASE_URL="postgresql://postgres.xxxxx:your_password@aws-1-us-east-1.pooler.supabase.com:6543/postgres"
+### Core runtime ------------------------------------------------------------
+# Railway automatically injects PORT; keep for local/dev parity
+PORT=5000
+NODE_ENV=production
 
-# Supabase Configuration
-# Get these from your Supabase project settings -> API
-SUPABASE_URL="https://your-project-id.supabase.co"
-SUPABASE_ANON_KEY="your_supabase_anon_key_here"
-SUPABASE_SERVICE_ROLE_KEY="your_supabase_service_role_key_here"
+### Database (PostgreSQL) ----------------------------------------------------
+# Example using Railway's managed Postgres instance
+DATABASE_URL="postgresql://username:password@host.railway.internal:5432/database?sslmode=require"
 
-# Stripe Payment Configuration
-# Get these from your Stripe dashboard -> Developers -> API keys
-# Use test keys for development, live keys for production
-STRIPE_SECRET_KEY="sk_test_your_stripe_secret_key_here"
-STRIPE_PUBLISHABLE_KEY="pk_test_your_stripe_publishable_key_here"
+### Stripe (payments) --------------------------------------------------------
+# Replace with LIVE keys before going live
+STRIPE_SECRET_KEY="sk_live_XXXXXXXXXXXXXXXXXXXXXXXX"
+STRIPE_PUBLISHABLE_KEY="pk_live_XXXXXXXXXXXXXXXXXXXXXXXX"
 
-# GoHighLevel CRM Integration (Optional)
-# Get this from your GoHighLevel app -> API Keys
-GHL_API_KEY="your_ghl_api_key_here"
-SESSION_SECRET="your-super-secret-session-key-here"
+### GoHighLevel (CRM) --------------------------------------------------------
+# Optional – only required if CRM sync is enabled
+GHL_API_KEY="your_gohighlevel_api_key"
+
+### Application --------------------------------------------------------------
+# Long random string for cookie/session security
+SESSION_SECRET="replace-with-64-char-random-string"
+
+### Frontend -----------------------------------------------------------------
+# Public URL for the API, e.g. https://your-service-name.up.railway.app
+VITE_API_URL="https://your-railway-domain"
