refactor: migrate from Prisma to Supabase
- Remove all Prisma files, schema, and migrations
- Update Supabase client configuration with proper env vars
- Create comprehensive Supabase setup guide (SUPABASE-SETUP.md)
- Update all documentation (README, PROJECT-DOCUMENTATION, DEPLOYMENT)
- Remove Prisma references from Dockerfile and scripts
- Split vite utilities into production and dev files
- Update environment variable templates for Supabase

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,16 @@
 PORT=5000
 NODE_ENV=production
 
-### Database (PostgreSQL) ----------------------------------------------------
-# Example using Railway's managed Postgres instance
-DATABASE_URL="postgresql://username:password@host.railway.internal:5432/database?sslmode=require"
+### Supabase (Database & Backend) -------------------------------------------
+# Get these from your Supabase project settings: https://app.supabase.com
+# Project Settings -> API -> Project URL
+SUPABASE_URL="https://your-project.supabase.co"
+
+# Project Settings -> API -> Project API keys -> anon/public key
+SUPABASE_ANON_KEY="your-anon-key-here"
+
+# Optional: Service role key for admin operations (keep secret!)
+# SUPABASE_SERVICE_ROLE_KEY="your-service-role-key-here"
 
 ### Stripe (payments) --------------------------------------------------------
 # Replace with LIVE keys before going live
@@ -22,7 +29,3 @@ GHL_API_KEY="your_gohighlevel_api_key"
 ### Application --------------------------------------------------------------
 # Long random string for cookie/session security
 SESSION_SECRET="replace-with-64-char-random-string"
-
-### Frontend -----------------------------------------------------------------
-# Public URL for the API, e.g. https://your-service-name.up.railway.app
-VITE_API_URL="https://your-railway-domain"
